--- a/clinica_online/src/app/pages/mis-turnos/mis-turnos.component.css
+++ b/clinica_online/src/app/pages/mis-turnos/mis-turnos.component.css
@@ -316,3 +316,54 @@ animation: rotation 1s linear infinite;
     background-color: #1abae2;
     border-radius: 50px;
 }
+
+.nav-div {
+        height: 150px;
+        width: 400px;
+        overflow:hidden; overflow-y:scroll;
+}
+
+.button-7 {
+        background-color: rgb(78, 75, 75);
+        border: 1px solid transparent;
+        border-radius: 3px;
+        box-shadow: rgba(255, 255, 255, .4) 0 1px 0 0 inset;
+        box-sizing: border-box;
+        color: #fff;
+        cursor: pointer;
+        display: inline-block;
+        font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 1.15385;
+        margin: 0;
+        outline: none;
+        padding: 8px .8em;
+        position: relative;
+        text-align: center;
+        text-decoration: none;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        vertical-align: baseline;
+        white-space: nowrap;
+      }
+      
+      .button-7:hover,
+      .button-7:focus {
+        background-color: #07c;
+      }
+      
+      .button-7:focus {
+        box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
+      }
+      
+      .button-7:active {
+        background-color: #0064bd;
+        box-shadow: none;
+      }
+      
+      .clicked-btn7 {
+         background-color: #0064bd;
+        box-shadow: none;
+      }
