--- a/clinica_online/src/app/pages/mis-turnos/mis-turnos.component.html
+++ b/clinica_online/src/app/pages/mis-turnos/mis-turnos.component.html
@@ -6,7 +6,7 @@
     <div class="col-9" style="margin-left: 16em;">
         <div class="container">
             <div class="row">
-                <div class="card col-9 scale-up-top" style="height: auto; width:100%; margin-left: 1em;">
+                <div class="card col-9 scale-up-top mb-2" style="height: auto; width:100%; margin-left: 1em;">
                    
                     <div class="card-body">
                         <h2 class="card-title">Mis Turnos</h2>
@@ -42,21 +42,34 @@
 
                             <div class="container mb-2">
                               <div class="row" *ngIf="this.mostrarFiltro == 'especialidad'" style="float:left">
-                                <div class="col-3" *ngFor="let e of this.arrayEspecialidades" style="margin-right: 1em; margin-left: 1em; padding-right: 0px; padding-left: 0px; margin-bottom: 1em;">
+                                <div class="col-3" *ngFor="let e of this.arrayEspecialidades" style="margin-right: 1.5em; margin-left: 1.5em; margin-bottom: 1em;">
                                   <button class="button-7" 
-                                  [ngClass]="this.especialidadSeleccionada == e ? 'clicked-btn7' : ''">
+                                  [ngClass]="this.especialidadSeleccionada === e ? 'clicked-btn7' : ''"
+                                  (click)="onClickFiltroEspecialidad(e)">
                                     {{e}}
                                   </button>
                                 </div>
                               </div>
-  
-                              <div class="row" *ngIf="this.mostrarFiltro == 'especialista'" style="float:left">
-                                <div class="col-3" *ngFor="let e of this.arrayEspecialistas" style="margin-right: 1em; margin-left: 1em; padding-right: 0px; padding-left: 0px; margin-bottom: 1em;">
-                                  <button class="button-7"
-                                  [ngClass]="this.especialistaSeleccionado.uid == e.uid ? 'clicked-btn7' : ''">
-                                    {{e.nombre}}
-                                  </button>
+
+
+                              <div *ngIf="this.mostrarFiltro == 'especialista'" style="float:left; margin-bottom: 1em;">
+                                
+                                <div class="nav-div" >
+                                  <div *ngFor="let p of this.arrayEspecialistas">
+                                      <ul class="list-group">
+                                        <li class="list-group-item" style="margin-bottom: 0.5em;">
+                                          {{p.nombre}}
+                                          <button class="button-7" style="float:right; margin-left: 1em;"
+                                          [ngClass]="this.especialistaSeleccionado == p.uid ? 'clicked-btn7' : ''"
+                                          (click)="onClickFiltroEspecialista(p.uid)">
+                                            Seleccionar
+                                          </button>
+                                        </li>
+                                      </ul>
+                                    </div>
+
                                 </div>
+                                
                               </div>
   
                               <div *ngIf="this.mostrarFiltro == 'paciente'" style="float:left; margin-bottom: 1em;">
@@ -67,7 +80,8 @@
                                         <li class="list-group-item" style="margin-bottom: 0.5em;">
                                           {{p.nombre}}
                                           <button class="button-7" style="float:right; margin-left: 1em;"
-                                          [ngClass]="this.pacienteSeleccionado.uid == p.uid ? 'clicked-btn7' : ''">
+                                          [ngClass]="this.pacienteSeleccionado == p.uid ? 'clicked-btn7' : ''"
+                                          (click)="onClickFiltroPaciente(p.uid)">
                                             Seleccionar
                                           </button>
                                         </li>
@@ -96,7 +110,7 @@
                                   </tr>
                                 </thead>
                                 <tbody>
-                                  <tr class="tr-tabla" *ngFor="let turno of turnos">
+                                  <tr class="tr-tabla" *ngFor="let turno of arrayTurnosFiltro">
                                     <td>
                                       <span>{{turno.dia}}</span>
                                     </td>
